Began to solve data type challenge

--- a/Python Essential Training - LinkedIn Learning/Basic Data Structures.ipynb
+++ b/Python Essential Training - LinkedIn Learning/Basic Data Structures.ipynb
@@ -688,25 +688,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "6995a215",
    "metadata": {},
    "outputs": [],
    "source": [
     "def encodeString(stringVal):\n",
-    "    pass\n",
-    "\n",
+    "    encoded_list = []\n",
+    "    prev_char = stringVal[0]\n",
+    "    counter = 1\n",
+    "    for char in stringVal[1:]:\n",
+    "        if char == prev_char:\n",
+    "            counter = counter + 1\n",
+    "        else:\n",
+    "            encoded_list.append((prev_char,counter))\n",
+    "            prev_char = char\n",
+    "            counter = 1\n",
+    "    \n",
+    "    encoded_list.append((prev_char,counter))\n",
+    "    return encoded_list       \n",
+    "            \n",
     "def decodeString(encodedList):\n",
-    "    pass"
+    "    orig_string = \"\"\n",
+    "    for char, counter in encodedList:\n",
+    "        orig_string = orig_string + char * counter\n",
+    "    print(orig_string)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "50c2b5c5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('A', 5), ('B', 4), ('A', 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(encodeString('AAAAABBBBAAA'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "011274ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAAABBBBAAA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decodeString([('A', 5), ('B', 4), ('A', 3)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8ee50ba6",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "art = '''\n",
+    "\n",
+    "                                                                                \n",
+    "                                                                                \n",
+    "                               %%%%%%%%%%%%%%%%%%%                              \n",
+    "                        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%                       \n",
+    "                    %%%%%%%%                         %%%%%%%%                   \n",
+    "                %%%%%%%                                   %%%%%%                \n",
+    "              %%%%%%                                         %%%%%%             \n",
+    "           %%%%%%                                               %%%%%           \n",
+    "          %%%%%                                                   %%%%%         \n",
+    "        %%%%%                                                       %%%%%       \n",
+    "       %%%%                 %%%%%              %%%%%                  %%%%      \n",
+    "      %%%%                 %%%%%%%            %%%%%%%                  %%%%     \n",
+    "     %%%%                  %%%%%%%            %%%%%%%                   %%%%    \n",
+    "    %%%%                   %%%%%%%            %%%%%%%                    %%%%   \n",
+    "    %%%%                    %%%%%              %%%%%                     %%%%   \n",
+    "   %%%%                                                                   %%%%  \n",
+    "   %%%%                                                                   %%%%  \n",
+    "   %%%%                                                                   %%%%  \n",
+    "   %%%%                                                      %%%%        %%%%   \n",
+    "    %%%%       %%%%%%                                        %%%%%       %%%%   \n",
+    "    %%%%         %%%%                                       %%%%        %%%%    \n",
+    "     %%%%         %%%%                                     %%%%         %%%%    \n",
+    "      %%%%         %%%%%                                  %%%%         %%%%     \n",
+    "       %%%%%         %%%%%                             %%%%%         %%%%%      \n",
+    "        %%%%%          %%%%%%                        %%%%%          %%%%        \n",
+    "          %%%%%           %%%%%%%               %%%%%%%           %%%%%         \n",
+    "            %%%%%             %%%%%%%%%%%%%%%%%%%%%             %%%%%           \n",
+    "              %%%%%%%                                        %%%%%              \n",
+    "                 %%%%%%%                                 %%%%%%%                \n",
+    "                     %%%%%%%%%                     %%%%%%%%%                    \n",
+    "                          %%%%%%%%%%%%%%%%%%%%%%%%%%%%%                         \n",
+    "                                   %%%%%%%%%%%%                                 \n",
+    "                                                                                \n",
+    "                                                                                 \n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2bfb29d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encodedString = encodeString(art)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "46697048",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n                                                                                \\n                                                                                \\n                               %%%%%%%%%%%%%%%%%%%                              \\n                        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%                       \\n                    %%%%%%%%                         %%%%%%%%                   \\n                %%%%%%%                                   %%%%%%                \\n              %%%%%%                                         %%%%%%             \\n           %%%%%%                                               %%%%%           \\n          %%%%%                                                   %%%%%         \\n        %%%%%                                                       %%%%%       \\n       %%%%                 %%%%%              %%%%%                  %%%%      \\n      %%%%                 %%%%%%%            %%%%%%%                  %%%%     \\n     %%%%                  %%%%%%%            %%%%%%%                   %%%%    \\n    %%%%                   %%%%%%%            %%%%%%%                    %%%%   \\n    %%%%                    %%%%%              %%%%%                     %%%%   \\n   %%%%                                                                   %%%%  \\n   %%%%                                                                   %%%%  \\n   %%%%                                                                   %%%%  \\n   %%%%                                                      %%%%        %%%%   \\n    %%%%       %%%%%%                                        %%%%%       %%%%   \\n    %%%%         %%%%                                       %%%%        %%%%    \\n     %%%%         %%%%                                     %%%%         %%%%    \\n      %%%%         %%%%%                                  %%%%         %%%%     \\n       %%%%%         %%%%%                             %%%%%         %%%%%      \\n        %%%%%          %%%%%%                        %%%%%          %%%%        \\n          %%%%%           %%%%%%%               %%%%%%%           %%%%%         \\n            %%%%%             %%%%%%%%%%%%%%%%%%%%%             %%%%%           \\n              %%%%%%%                                        %%%%%              \\n                 %%%%%%%                                 %%%%%%%                \\n                     %%%%%%%%%                     %%%%%%%%%                    \\n                          %%%%%%%%%%%%%%%%%%%%%%%%%%%%%                         \\n                                   %%%%%%%%%%%%                                 \\n                                                                                \\n                                                                                 \\n\\n'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decodeString(encodedString)"
+   ]
   }
  ],
  "metadata": {
